tests/ui/array-slice-vec/vector-no-ann.stderr
error[E0282]: type annotations needed
  --> $DIR/vector-no-ann.rs:2:16
   |
LL |     let _foo = Vec::new();
   |                ^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Vec`
   |
help: consider specifying the generic argument
   |
LL |     let _foo = Vec::<T>::new();
   |                   +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
